# expenses_classifier

./: .gitignore  README.md  cascade.py  cli.py  config.py  model.py  normalize.py  pyproject.toml  rules.py
.github/workflows/: publish.yml
src/expense_classifier/: __init__.py  cascade.py  cli.py  config.py  model.py  rules.py
src/expense_classifier/data/: merchants.default.json
tests/: test_classifier.py
