[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-classifier"
version = "1.0.0"
description = "Classificador local de despesas pessoais por descrição de transação bancária (BR)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marcelo Andriolli" }]
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
expense-classifier = "cli:main"

[tool.setuptools]
py-modules = ["cli", "cascade", "config", "model", "normalize", "rules"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
