[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-classifier"
version = "0.1.0"
description = "Classificador local de despesas pessoais por descrição de transação bancária (BR)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "Marcelo Andriolli" }]
keywords = ["expenses", "classifier", "finance", "banking", "brazil", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/marceloandriolli/expenses_classifier"
Repository = "https://github.com/marceloandriolli/expenses_classifier"
Issues = "https://github.com/marceloandriolli/expenses_classifier/issues"

[project.scripts]
expense-classifier = "expense_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
expense_classifier = ["data/*.json", "data/*.csv"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
